--- a/django-projects/locallibrary/catalog/templates/index.html
+++ b/django-projects/locallibrary/catalog/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base_generic.html" %}
 
+{% block title %}<title>Homepage</title>{% endblock %}
+
 {% block content %}
   <h1>Local Library Home</h1>
   <p>Welcome to LocalLibrary.
@@ -10,5 +12,7 @@
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <li><strong>Fiction genres:</strong> {{ fiction_genres }}</li>
+    <li><strong>Summer Theme Titles:</strong> {{ summer_theme_titles }}</li>
   </ul>
 {% endblock %}
