--- a/django-projects/locallibrary/catalog/templates/index.html
+++ b/django-projects/locallibrary/catalog/templates/index.html
@@ -14,5 +14,6 @@
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     <li><strong>Fiction genres:</strong> {{ fiction_genres }}</li>
     <li><strong>Summer Theme Titles:</strong> {{ summer_theme_titles }}</li>
+    <li><strong>Session: {{ session }}</strong></li>
   </ul>
 {% endblock %}
