--- a/django-projects/locallibrary/catalog/templates/catalog/author_form.html
+++ b/django-projects/locallibrary/catalog/templates/catalog/author_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <form action="" method="post">
-  {% csrf_token %}
+  <!-- {% csrf_token %} -->
   <table>
     {{ form.as_table }}
   </table>
