--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -4,13 +4,19 @@
   {% block title %}<title>Local Library</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- <script
+  src="https://code.jquery.com/jquery-3.7.0.js"
+  integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+  crossorigin="anonymous"></script> -->
+  <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
   <!-- Add additional CSS in static file -->
   {% load static %}
-  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  <script src="{% static 'jquery-3.7.0.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
   <div class="container-fluid">
+    <div id="header"></div>
     <div class="row">
       <div class="col-sm-2">
       {% block sidebar %}
@@ -22,7 +28,7 @@
           {% if user.is_authenticated %}
             <li>User: {{ user.get_username }}</li>
             <li><a href="{% url 'my-books' %}">My Borrowed</a></li>
-            {% if perms.catalog.can_mark_returned %}<li><a href="{% url 'all-borrowed' %}"> All Borrowed</a></li>{% endif %}
+            {% if perms.posts.can_mark_returned %}<li><a href="{% url 'all-borrowed' %}"> All Borrowed</a></li>{% endif %}
             <!--
               Note also how we have appended ?next={{ request.path }} to the end of the URLs. What this does is add a URL parameter next containing the address (URL) of the current page, to the end of the linked URL. After the user has successfully logged in/out, the views will use this "next" value to redirect the user back to the page where they first clicked the login/logout link.
             -->
@@ -33,7 +39,13 @@
         </ul>
      {% endblock %}
       </div>
-      <div class="col-sm-10 ">{% block content %}{% endblock %}
+      <div class="col-sm-10 ">{% block content %}
+        {% endblock %}
+        <script>
+          $.ajax({url: "{% static 'headers/header.html' %}"}).done(function(html) {
+              $("#header").html(html);
+            });
+        </script>
         {% block pagination %}
           {% if is_paginated %}
             <div class="pagination">
