--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -4,19 +4,17 @@
   {% block title %}<title>Local Library</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <script
-  src="https://code.jquery.com/jquery-3.7.0.js"
-  integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-  crossorigin="anonymous"></script> -->
-  <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
   {% load static %}
-  <script src="{% static 'jquery-3.7.0.js' %}"></script>
+  <script src="{% static 'jquery-3.7.0.min.js' %}"></script>
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
   <div class="container-fluid">
-    <div id="header"></div>
+    <div id="header">
+      {{header}}
+    </div>
     <div class="row">
       <div class="col-sm-2">
       {% block sidebar %}
@@ -39,13 +37,9 @@
         </ul>
      {% endblock %}
       </div>
-      <div class="col-sm-10 ">{% block content %}
+      <div class="col-sm-10 ">
+        {% block content %}
         {% endblock %}
-        <script>
-          $.ajax({url: "{% static 'headers/header.html' %}"}).done(function(html) {
-              $("#header").html(html);
-            });
-        </script>
         {% block pagination %}
           {% if is_paginated %}
             <div class="pagination">
