--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -11,41 +11,53 @@
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid text-center">
     <div id="header">
       {{header}}
     </div>
     <div class="row">
       <div class="col-sm-2">
-      {% block sidebar %}
-      ??
-        {{sidebar}}
-     {% endblock %}
-      </div>
-      <div class="col-sm-10 ">
-        {% block content %}
+          {% block sidebar %}
+          ??
+            {{sidebar}}
         {% endblock %}
-        {% block pagination %}
-          {% if is_paginated %}
-            <div class="pagination">
-              <span class="page-links">
-                {% if page_obj.has_previous %}
-                <a href="{{ request.path }}?page={{page_obj.previous_page_number }}">
-                  previous
-                </a>
-                {% endif %}
-                <span class="page-current">
-                  Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                </span>
-                {% if page_obj.has_next %}
-                  <a href="{{ request.path }}?page={{page_obj.next_page_number }}">
-                    next
-                  </a>
-                {% endif %}
-              </span>
-            </div>
-          {% endif %}
+      </div>
+      <div class="col-sm-8">
+        <link href="{% static 'assets/grid.css' %}" rel="stylesheet">
+        <div class="container">
+          <div class="row row-cols-md-4 mb-4 text-center">
+            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
+            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
+            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
+            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
+          </div>
+          {% block content %}
           {% endblock %}
+          {% block pagination %}
+            {% if is_paginated %}
+              <div class="pagination">
+                <span class="page-links">
+                  {% if page_obj.has_previous %}
+                  <a href="{{ request.path }}?page={{page_obj.previous_page_number }}">
+                    previous
+                  </a>
+                  {% endif %}
+                  <span class="page-current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                  </span>
+                  {% if page_obj.has_next %}
+                    <a href="{{ request.path }}?page={{page_obj.next_page_number }}">
+                      next
+                    </a>
+                  {% endif %}
+                </span>
+              </div>
+            {% endif %}
+          {% endblock %}
+        </div>
+      </div>
+      <div class="col-sm-2">
+        placeholder
       </div>
     </div>
   </div>
