Post list view added to the homepage

--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -33,6 +33,7 @@
           </div>
           {% block content %}
           {% endblock %}
+          {{ posts }}
           {% block pagination %}
             {% if is_paginated %}
               <div class="pagination">
