--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -17,14 +17,13 @@
     </div>
     <div class="row">
       <div class="col-sm-2">
-          {% block sidebar %}
-          ??
-            {{sidebar}}
+        {% block sidebar %}
+          {{sidebar}}
         {% endblock %}
       </div>
       <div class="col-sm-8">
         <link href="{% static 'assets/grid.css' %}" rel="stylesheet">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row row-cols-md-4 mb-4 text-center">
             <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
             <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
@@ -58,7 +57,7 @@
         </div>
       </div>
       <div class="col-sm-2">
-        placeholder
+        {{sidebar}}
       </div>
     </div>
   </div>
