--- a/forum_v1/forum_v1/posts/templates/posts/post_list_item.html
+++ b/forum_v1/forum_v1/posts/templates/posts/post_list_item.html
@@ -1,13 +1,13 @@
 <!--<link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   {% if posts %}
-    <div class="row">
+    <div>
       <!-- Main content -->
-      <div class="col-lg-9 mb-3">
+      <div class="container-fluid">
         {% for post in posts %}
         <!-- End of post 1 -->
         <div class="card row-hover pos-relative py-3 px-3 mb-3 border-warning border-top-0 border-right-0 border-bottom-0 rounded-0">
-          <div class="row align-items-center">
+          <div class="align-items-center">
             <div class="col-md-8 mb-3 mb-sm-0">
               <h5>
                 <a href="#" class="text-primary">{{post.title}}</a>
@@ -26,7 +26,7 @@
                 {% endfor %}
               </div>
             <div class="col-md-4 op-7">
-              <div class="row text-center op-7">
+              <div class="text-center op-7">
                 <div class="col px-1"> <i class="ion-connection-bars icon-1x"></i> <span class="d-block text-sm">{{post.commends}} Votes</span> </div>
                 <div class="col px-1"> <i class="ion-ios-chatboxes-outline icon-1x"></i> <span class="d-block text-sm">{{post.replies}} Replies</span> </div>
               </div>
