--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% block title %}<title>Local Library</title>{% endblock %}
+  {% block title %}<title>Forum</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -25,10 +25,10 @@
         <link href="{% static 'assets/grid.css' %}" rel="stylesheet">
         <div class="container-fluid">
           <div class="row row-cols-md-4 mb-4 text-center">
-            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
-            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
-            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
-            <button class="col themed-grid-col"><code>.col</code> child of <code>.row-cols-md-4</code></button>
+            <button class="col themed-grid-col" onclick="window.alert('clicked')">Latest Activity</button>
+            <button class="col themed-grid-col" onclick="window.alert('clicked')">New Posts</button>
+            <button class="col themed-grid-col" onclick="window.alert('clicked')">Best</button>
+            <button class="col themed-grid-col" onclick="window.alert('clicked')">Unanswered</button>
           </div>
           {% block content %}
           {% endblock %}
@@ -60,6 +60,13 @@
         {{sidebar}}
       </div>
     </div>
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        <span class="col themed-grid-col">
+          <a href="{% url 'new' %}">New Post </a>
+        </span>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
