--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -13,66 +13,50 @@
 <body>
   <div class="container-fluid text-center">
     <div id="header">
-      {{header}}
+      <link href="{% static 'headers/headers.css' %}" rel="stylesheet">
+      <main>
+        <header class="p-3 mb-3 border-bottom">
+          <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+              <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="{% url 'posts' %}" class="nav-link px-2 link-secondary">Home</a></li>
+              </ul>
+      
+              <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+              </form>
+              
+              <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                {% if user.is_authenticated %}
+                  Welcome {{ user.get_username }}.
+                  <button type="button" class="btn">Logout</button>
+                {% else %}
+                  <button type="button" class="btn btn-outline-light me-2">Login</button>
+                  <button type="button" class="btn btn-warning">Sign-up</button>    
+                {% endif %}
+              </div>
+      
+              <div class="text-end">
+                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  <img src="{% static 'assets/img/cat.jpg' %}" alt="cat" width="32" height="32" class="rounded-circle">
+                </a>
+              </div>
+            </div>
+          </div>
+        </header>
+      
+      </main>
     </div>
     <div class="row">
       <div class="col-sm-2">
-        {% block sidebar %}
-          {{sidebar}}
-        {% endblock %}
+        <div style="background-color: black; width: 100%; height: 100%"></div>
       </div>
-      <div class="col-sm-8">
-        <link href="{% static 'assets/grid.css' %}" rel="stylesheet">
-        <div class="container-fluid">
-          {% if user.is_authenticated %}
-            <p> Welcome {{ user.get_username }} </p>
-            <div class="row row-cols-md-4 mb-4 text-center">
-              <button class="col themed-grid-col" id="filter_latest">Latest Activity</button>
-              <button class="col themed-grid-col" id="filter_new">New Posts</button>
-              <button class="col themed-grid-col" id="filter_best">Best</button>
-              <button class="col themed-grid-col" id="filter_unanswered">Unanswered</button>
-            </div>
-            {{ posts }}
-            {% block pagination %}
-              {% if is_paginated %}
-                <div class="pagination">
-                  <span class="page-links">
-                    {% if page_obj.has_previous %}
-                    <a href="{{ request.path }}?page={{page_obj.previous_page_number }}">
-                      previous
-                    </a>
-                    {% endif %}
-                    <span class="page-current">
-                      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
-                    </span>
-                    {% if page_obj.has_next %}
-                      <a href="{{ request.path }}?page={{page_obj.next_page_number }}">
-                        next
-                      </a>
-                    {% endif %}
-                  </span>
-                </div>
-              {% endif %}
-            {% endblock %}
-          </div>
-      <footer class="footer mt-auto py-3">
-        <div class="container">
-          <span class="col themed-grid-col">
-            <a href="{% url 'new' %}">New Post </a>
-          </span>
-        </div>
-      </footer>
-
-      {% elif request.path_info != '/accounts/login/' %}
-        <p>Please <a href = "{% url 'login' %}">login</a> to see this page.</p>
-      {% endif %}
       {% block content %}
+        <!-- default content text (typically empty) -->
       {% endblock %}
-    </div>
-    </div>
-    <div class="col-sm-2">
-      {{sidebar}}
-    </div>  
+      <div class="col-sm-2">
+        <div style="background-color: black; width: 100%; height: 100%"></div>
+      </div>  
   </div>
 </body>
 </html>
