--- a/forum_v1/forum_v1/posts/templates/index.html
+++ b/forum_v1/forum_v1/posts/templates/index.html
@@ -1,6 +1,53 @@
 {% extends "base_generic.html" %}
 
+{% load static %}
 {% block title %}<title>Homepage</title>{% endblock %}
 
 {% block content %}
+<div class="col-sm-8">
+    <link href="{% static 'assets/grid.css' %}" rel="stylesheet">
+    <div class="container-fluid">
+      {% if user.is_authenticated %}
+        <div class="row row-cols-md-4 mb-4 text-center">
+          <button class="col themed-grid-col" id="filter_latest">Latest Activity</button>
+          <button class="col themed-grid-col" id="filter_new">New Posts</button>
+          <button class="col themed-grid-col" id="filter_best">Best</button>
+          <button class="col themed-grid-col" id="filter_unanswered">Unanswered</button>
+        </div>
+        {{ posts }}
+        {% block pagination %}
+          {% if is_paginated %}
+            <div class="pagination">
+              <span class="page-links">
+                {% if page_obj.has_previous %}
+                <a href="{{ request.path }}?page={{page_obj.previous_page_number }}">
+                  previous
+                </a>
+                {% endif %}
+                <span class="page-current">
+                  Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+                {% if page_obj.has_next %}
+                  <a href="{{ request.path }}?page={{page_obj.next_page_number }}">
+                    next
+                  </a>
+                {% endif %}
+              </span>
+            </div>
+          {% endif %}
+        {% endblock %}
+      </div>
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="col themed-grid-col">
+        <a href="{% url 'new' %}">New Post </a>
+      </span>
+    </div>
+  </footer>
+
+  {% elif request.path_info != '/accounts/login/' %}
+    <p>Please <a href = "{% url 'login' %}">login</a> to see this page.</p>
+  {% endif %}
+</div>
+
 {% endblock %}
