--- a/forum_v1/forum_v1/posts/templates/posts/post_list_item.html
+++ b/forum_v1/forum_v1/posts/templates/posts/post_list_item.html
@@ -17,7 +17,7 @@
                 <a class="text-black" href="#">{{post.date_posted}}</a>
                 <span class="op-6">by</span>
                 <a class="text-black" href="#">
-                {{post.author.display_name}}
+                {{post.author.first_name}}
                 </a>
               </p>
               <div class="text-sm op-5">
@@ -28,7 +28,7 @@
             <div class="col-md-4 op-7">
               <div class="text-center op-7">
                 <div class="col px-1"> <i class="ion-connection-bars icon-1x"></i> <span class="d-block text-sm">{{post.commends}} Votes</span> </div>
-                <div class="col px-1"> <i class="ion-ios-chatboxes-outline icon-1x"></i> <span class="d-block text-sm">{{post.replies}} Replies</span> </div>
+                <div class="col px-1"> <i class="ion-ios-chatboxes-outline icon-1x"></i> <span class="d-block text-sm">{{post.num_replies}} Replies</span> </div>
               </div>
             </div>
             </div>
