--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -8,7 +8,7 @@
   <!-- Add additional CSS in static file -->
   {% load static %}
   <script src="{% static 'jquery-3.7.0.min.js' %}"></script>
-  <script src="{% static 'controller.js' %}"></script>
+  <script src="{% static 'assets/controller.js' %}"></script>
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
