--- a/forum_v1/forum_v1/posts/templates/posts/new_post.html
+++ b/forum_v1/forum_v1/posts/templates/posts/new_post.html
@@ -22,7 +22,7 @@
 <div class="container">
   <h3>Add a post!</h3>
   <!-- An empty action sends the form data to the same view.-->
-  <form action="" method="post">
+  <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
       <div class="form-group">
         <table>
@@ -30,7 +30,7 @@
         </table>
         <hr/>
         <button type="submit" class="btn">Submit</button>
-    </form> 
+    </form>
   </div>
   <script>
     $("#target-editor").markdown({
