--- a/forum_v1/forum_v1/posts/templates/posts/post_detail.html
+++ b/forum_v1/forum_v1/posts/templates/posts/post_detail.html
@@ -19,6 +19,12 @@
     <div class="col themed-grid-col">
         {{post.contents}}
     </div>
+    <div class="col themed-grid-col">
+      Attachments:
+      {% for file in post.file_paths %}
+        <a href={{file.path}}>{{file.name}}</a>
+      {% endfor %}
+    </div>
   </div>
 
   <div style="margin-left:20px;margin-top:20px">
@@ -47,6 +53,12 @@
             </div>
             <div class="col themed-grid-col">
                 {{reply.contents}}
+            </div>
+            <div class="col themed-grid-col">
+              Attachments:
+              {% for file in reply.file_paths %}
+                <a href={{file.path}}>{{file.name}}</a>
+              {% endfor %}
             </div>
         </div>
     {% endfor %}
