--- a/forum_v1/forum_v1/posts/templates/posts/post_detail.html
+++ b/forum_v1/forum_v1/posts/templates/posts/post_detail.html
@@ -22,7 +22,7 @@
     <div class="col themed-grid-col">
       Attachments:
       {% for file in post.file_paths %}
-        <a href={{file.path}}>{{file.name}}</a>
+        <a href={{file}}>{{file}}</a>
       {% endfor %}
     </div>
   </div>
