Django's file upload mechanism for multiple files is hacky.

--- a/forum_v1/forum_v1/posts/templates/posts/new_post.html
+++ b/forum_v1/forum_v1/posts/templates/posts/new_post.html
@@ -26,7 +26,7 @@
     {% csrf_token %}
       <div class="form-group">
         <table>
-          {{ form }}
+          {{ form.as_p }}
         </table>
         <hr/>
         <button type="submit" class="btn">Submit</button>
