--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -8,7 +8,6 @@
   <!-- Add additional CSS in static file -->
   {% load static %}
   <script src="{% static 'jquery-3.7.0.min.js' %}"></script>
-  <script src="{% static 'assets/controller.js' %}"></script>
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
@@ -22,11 +21,9 @@
               <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="{% url 'posts' %}" class="nav-link px-2 link-secondary">Home</a></li>
               </ul>
-      
               <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+                <input id="search_bar" type="search" class="form-control" placeholder="Search..." aria-label="Search" minlength="3">
               </form>
-              
               <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                 {% if user.is_authenticated %}
                   Welcome {{ user.get_username }}.
@@ -60,4 +57,5 @@
       </div>  
   </div>
 </body>
+<script src="{% static 'assets/controller.js' %}"></script>
 </html>
