--- a/forum_v1/forum_v1/posts/templates/index.html
+++ b/forum_v1/forum_v1/posts/templates/index.html
@@ -9,10 +9,10 @@
     <div class="container-fluid">
       {% if user.is_authenticated %}
         <div class="row row-cols-md-4 mb-4 text-center">
-          <button class="col themed-grid-col" id="filter_latest">Latest Activity</button>
-          <button class="col themed-grid-col" id="filter_new">New Posts</button>
-          <button class="col themed-grid-col" id="filter_best">Best</button>
-          <button class="col themed-grid-col" id="filter_unanswered">Unanswered</button>
+          <button class="filter col themed-grid-col" id="latest_activity">Latest Activity</button>
+          <button class="filter col themed-grid-col" id="new">New Posts</button>
+          <button class="filter col themed-grid-col" id="best">Best</button>
+          <button class="filter col themed-grid-col" id="unanswered">Unanswered</button>
         </div>
         {{ posts }}
         {% block pagination %}
