--- a/forum_v1/forum_v1/posts/templates/index.html
+++ b/forum_v1/forum_v1/posts/templates/index.html
@@ -10,7 +10,7 @@
       {% if user.is_authenticated %}
         <div class="row row-cols-md-4 mb-4 text-center">
           <button class="filter col themed-grid-col" id="latest_activity">Latest Activity</button>
-          <button class="filter col themed-grid-col" id="new">New Posts</button>
+          <button class="filter col themed-grid-col" id="new_posts">New Posts</button>
           <button class="filter col themed-grid-col" id="best">Best</button>
           <button class="filter col themed-grid-col" id="unanswered">Unanswered</button>
         </div>
