--- a/forum_v1/forum_v1/posts/templates/base_generic.html
+++ b/forum_v1/forum_v1/posts/templates/base_generic.html
@@ -4,9 +4,10 @@
   {% block title %}<title>Forum</title>{% endblock %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Add additional CSS in static file -->
   {% load static %}
+  <link href="{% static 'assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+  <script src="{% static 'assets/dist/js/bootstrap.bundle.min.js' %}"></script>
   <link rel="stylesheet" href="{% static 'assets/fontawesome-free-6.4.2-web/css/all.min.css' %}">
   <script src="{% static 'jquery-3.7.0.min.js' %}"></script>
   <link rel="stylesheet" href="{% static 'styles.css' %}">
@@ -33,18 +34,21 @@
               <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                 {% if user.is_authenticated %}
                   Welcome {{ user.get_username }}.
-                  <button type="button" class="btn">Logout</button>
                 {% else %}
                   <button type="button" class="btn btn-outline-light me-2">Login</button>
                   <button type="button" class="btn btn-warning">Sign-up</button>    
                 {% endif %}
               </div>
-      
+              <div class="dropdown">
+                <button style="background-size: cover !important; background: url('{% static 'assets/img/cat.jpg' %}')"
+                  type="button" class="btn btn-secondary dropdown-toggle"
+                  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a href="{% url 'logout' %}" class="dropdown-item">Logout</a>
+                </div>
+                </div>
               <div class="text-end">
-                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="{% static 'assets/img/cat.jpg' %}" alt="cat" width="32" height="32" class="rounded-circle">
-                </a>
-              </div>
             </div>
           </div>
         </header>
