--- a/forum_v1/forum_v1/posts/templates/posts/post_list_item.html
+++ b/forum_v1/forum_v1/posts/templates/posts/post_list_item.html
@@ -1,37 +1,35 @@
-<!--<link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"> -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+{% load static %}
   {% if posts %}
     <div>
       <!-- Main content -->
       <div class="container-fluid">
         {% for post in posts %}
         <!-- End of post 1 -->
-        <div class="card row-hover pos-relative py-3 px-3 mb-3 border-warning border-top-0 border-right-0 border-bottom-0 rounded-0">
-          <div class="align-items-center">
-            <div class="col-md-8 mb-3 mb-sm-0">
+        <div class="row pos-relative py-3 px-3 mb-3 rounded-1" style="border-style: solid; border-color: brown">
+        <!--  <div class="align-items-center"> -->
+            <div class="col col-md-8">
               <h5>
                 <a href="{% url 'post-detail' post_id=post.id %}" class="text-primary">{{post.title}}</a>
               </h5>
               <p class="text-sm">
-                <span class="op-6">Posted on {{post.date_posted}}</span>
-                <span class="op-6">by</span>
+                <span>Posted on {{post.date_posted}}</span>
+                <span>by</span>
                 <a class="text-black" href="#">
                 {{post.author.first_name}}
                 </a>
               </p>
-              <div class="text-sm op-5">
+              <div class="text-sm">
                 {% for t in post.topic %}
-                  <a class="text-black mr-2" href="#">{{t}}</a>
+                  <a class="text-black" href="#">{{t}}</a>
                 {% endfor %}
               </div>
-            <div class="col-md-4 op-7">
-              <div class="text-center op-7">
-                <div class="col px-1"> <i class="ion-connection-bars icon-1x"></i> <span class="d-block text-sm">{{post.commends}} Votes</span> </div>
-                <div class="col px-1"> <i class="ion-ios-chatboxes-outline icon-1x"></i> <span class="d-block text-sm">{{post.num_replies}} Replies</span> </div>
+            </div>
+            <div class="col col-md-4">
+              <div class="text-center">
+                <div class="col"> <i class="fa-solid fa-reply"></i> <span class="text-sm">{{post.num_replies}} Replies</span> </div>
               </div>
             </div>
-            </div>
-          </div>
+        <!-- </div> -->
         </div>
         {% endfor %}
       </div>
